--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,141 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DADADA"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity"
+    android:background="@color/bgColor1">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/face"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/sebook_hi_face"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_percent="0.30"
+        app:layout_constraintWidth_percent="0.33"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView177"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="시너지 교육에 오신걸 환영합니다."
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/pretendard_semibold"
+        android:paddingHorizontal="10sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:layout_marginTop="8sp" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rounded_bg_layout_id"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/login_border_background"
+        app:layout_constraintWidth_percent="0.85"
+        app:layout_constraintTop_toBottomOf="@id/textView177"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView177"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20sp">
+
+        <ImageView
+            android:id="@+id/login_icon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/login_user"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp" />
+
+        <EditText
+            android:id="@+id/editTextId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="아이디를 입력해주세요."
+            android:background="@null"
+            android:inputType="text"
+            android:textColor="#7c7c7c"
+            app:layout_constraintStart_toEndOf="@+id/login_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="16dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rounded_bg_layout_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/login_border_background"
+        app:layout_constraintWidth_percent="0.85"
+        app:layout_constraintTop_toBottomOf="@id/rounded_bg_layout_id"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="11sp">
+
+        <ImageView
+            android:id="@+id/password_icon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/login_lock"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp" />
+
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="비밀번호를 입력해주세요."
+            android:background="@null"
+            android:inputType="textPassword"
+            android:textColor="#7c7c7c"
+            app:layout_constraintStart_toEndOf="@+id/password_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="16dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/login"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/rounded_bg_layout_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="11sp"
         android:gravity="center_horizontal">
-
-        <!-- 아이디 입력 레이아웃 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/border_background13"
-            android:padding="10dp">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/user1"
-                android:tint="#8D838383" />
-
-            <EditText
-                android:id="@+id/editTextId"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:hint="아이디를 입력해주세요."
-                android:inputType="text"
-                android:paddingLeft="9dp"
-                android:textColor="#8D838383"
-                android:textColorHint="#8D838383" />
-        </LinearLayout>
-
-        <!-- 비밀번호 입력 레이아웃 -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginTop="11dp"
-            android:background="@drawable/border_background13"
-            android:padding="10dp">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/lock1"
-                android:tint="#8D838383" />
-
-            <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:hint="비밀번호를 입력해주세요."
-                android:inputType="textPassword"
-                android:paddingLeft="9dp"
-                android:textColor="#8D838383"
-                android:textColorHint="#8D838383" />
-        </LinearLayout>
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="280dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/border_background15"
-            android:padding="5dp"
-            android:text="로그인" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_border_background_yellow"
+            android:padding="10dp"
+            android:text="로그인"
+            android:elevation="0dp"
+            android:stateListAnimator="@null"
+            android:fontFamily="@font/pretendard_regular"
+            android:textColor="@color/black"
+            app:layout_constraintWidth_percent="0.85"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <CheckBox
             android:id="@+id/checkBoxAutoLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="자동 로그인" />
+            android:text="자동 로그인"
+            android:fontFamily="@font/pretendard_regular"
+            app:layout_constraintTop_toBottomOf="@id/btnLogin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    </LinearLayout>
-
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:gravity="center"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.228">
+        app:layout_constraintTop_toBottomOf="@id/login"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btnRegister"
-            android:layout_width="280dp"
-            android:layout_height="40dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@drawable/border_background14"
+            android:background="@drawable/login_border_background_white"
             android:padding="5dp"
-            android:text="회원가입" />
+            android:text="회원가입"
+            android:fontFamily="@font/pretendard_regular"
+            android:textColor="@color/black"
+            android:stateListAnimator="@null"
+            app:layout_constraintWidth_percent="0.65"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <Button
             android:id="@+id/btnFindIdPassword"
             android:layout_width="wrap_content"
@@ -143,7 +180,10 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:backgroundTint="#B3B3B3"
-            android:text="아이디/비밀번호 찾기" />
-    </LinearLayout>
+            android:text="아이디/비밀번호 찾기"
+            app:layout_constraintTop_toBottomOf="@id/btnRegister"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
