--- a/app/src/main/res/layout/activity_new_screen_practice.xml
+++ b/app/src/main/res/layout/activity_new_screen_practice.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:text="다음 아이콘이 의미하는\n용어는 무엇일까요?"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -37,16 +37,16 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/new_screen_icon_test"
         android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/header_layout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header_layout" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/description_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/icon_image"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,15 +58,15 @@
         android:layout_height="120dp"
         android:layout_marginTop="20dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/icon_image"
+        app:layout_constraintTop_toBottomOf="@id/description_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/choose_option1_btn"
         android:layout_width="300dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="15dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/description_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:textSize="25dp"
+                android:textSize="20sp"
                 android:text="1. 블루투스"
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
@@ -99,11 +99,12 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/choose_option2_btn"
         android:layout_width="300dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/choose_option1_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -116,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:textSize="25dp"
+                android:textSize="20sp"
                 android:text="2. 음량"
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
@@ -133,11 +134,12 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/choose_option3_btn"
         android:layout_width="300dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/choose_option2_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.3">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -150,7 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:textSize="25dp"
+                android:textSize="20sp"
                 android:text="3. 신호"
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
@@ -167,11 +169,12 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/choose_option4_btn"
         android:layout_width="300dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/choose_option3_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.4">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -184,7 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:textSize="25dp"
+                android:textSize="20sp"
                 android:text="4. 와이파이"
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
