--- a/app/src/main/res/layout/item_exam_result.xml
+++ b/app/src/main/res/layout/item_exam_result.xml
@@ -1,56 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp">
+    android:orientation="horizontal"
+    android:padding="16dp">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/white_rounded_rect"/>
-
-    <com.sungkyul.synergy.utils.GalaxyButton
-        android:id="@+id/galaxy_button"
-        android:layout_width="match_parent"
-        android:layout_height="74dp"/>
+        android:id="@+id/ox_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="16dp" />
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="12dp"
-        android:gravity="center_vertical">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/ox_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/todo_circle"/>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp">
+            android:text="Exam Result"
+            android:textSize="16sp"/>
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical">
-
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1. 문제"
-                    android:textSize="16sp"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        <com.sungkyul.synergy.utils.GalaxyButton
+            android:id="@+id/galaxy_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View Details"/>
 
     </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
