--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -58,12 +58,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
-        android:layout_height="250dp"
-        android:layout_marginStart="24dp"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="3dp"
+        app:layout_constraintHeight_percent="0.40"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/headerImage">
@@ -135,10 +132,10 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/examResultCardView"
             android:layout_width="0dp"
-            android:layout_height="170dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             app:cardCornerRadius="16dp"
-            app:cardElevation="3dp"
+            app:layout_constraintHeight_percent="1"
             app:layout_constraintEnd_toStartOf="@+id/CheckResultCardView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -146,7 +143,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -166,7 +162,7 @@
                     android:layout_height="70dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="18dp"
-                    android:src="@drawable/check_my_profile" />
+                    android:src="@drawable/check_my_profile2" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
